--- a/ACME/src/main/webapp/styles/common.css
+++ b/ACME/src/main/webapp/styles/common.css
@@ -7,13 +7,18 @@
  * http://www.tdg-seville.info/License.html
  * 
  */
-
+.form-group{
+    font-family: "Andale Mono";
+}
 .error {
+    font-family: "Andale Mono";
     color: red;
     font-weight: bolder;
 }
 
 .message {
+    font-family: "Andale Mono";
     color: red;
     font-weight: bolder;
 }
+.
