--- a/ACME/src/main/webapp/styles/jmenu.css
+++ b/ACME/src/main/webapp/styles/jmenu.css
@@ -9,6 +9,7 @@
  */
 
 .jMenu {
+    font-family: "Andale Mono";
     display: table;
     margin: 0px;
     padding: 0px;
@@ -17,25 +18,28 @@
 /* First level */
 
 .jMenu li {
+    font-family: "Andale Mono";
     display: table-cell;
     background-color: #680512;
     margin: 0px;
 }
 
 .jMenu li a {
+    font-family: "Andale Mono";
     padding: 10px;
     display: block;
     background-color: transparent;
     color: white;
     text-transform: uppercase;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 12px;
     text-decoration: none;
 }
 
 /* Lower levels */
 
 .jMenu li ul {
+    font-family: "Andale Mono";
     display: none;
     position: absolute;
     z-index: 9999;
@@ -44,6 +48,7 @@
 }
 
 .jMenu li ul li {
+    font-family: "Andale Mono";
     background-color: #700513;
     display: block;
     border-bottom: 1px solid #8e0618;
@@ -51,6 +56,7 @@
 }
 
 .jMenu li ul li.arrow {
+    font-family: "Andale Mono";
     background-color: #700513;
     background-image: url('../images/arrow_down.png');
     background-repeat: no-repeat;
@@ -62,6 +68,7 @@
 }
 
 .jMenu li ul li a {
+    font-family: "Andale Mono";
     font-size: 11px;
     text-transform: none;
     padding: 7px;
@@ -72,6 +79,7 @@
 }
 
 .jMenu li ul li a.isParent {
+    font-family: "Andale Mono";
     background-color: #700513;
     background-image: url('../images/arrow_right.png');
     background-repeat: no-repeat;
@@ -80,6 +88,7 @@
 }
 
 .jMenu li ul li a:hover {
+    font-family: "Andale Mono";
     background-color: #8e0618;
     border-top: 1px solid #700513;
     border-bottom: 1px solid #680512;
